criado controllers, routes, services e validates para as partidas e ajustado documentação
