# src/validates/usuario.js
@@ -1,11 +1,11 @@
 const validateNewUser = (userData) => {
     const errors = [];
 
-    if (!userData.nome_de_usuario) {
+    if (!userData.nome) {
         errors.push('O nome de usuário é obrigatório');
     } 
 
-    if (!userData.nick_usuario) {
+    if (!userData.nick) {
         errors.push('O nick do usuário é obrigatório');
     }
 
